# ai-benchmarks

./: .gitattributes  .gitignore  11_labs_stream_api_latency_benchmark.py  Justfile  Procfile  README.md  app.py  dalle.py  dalle_suite.sh  elevenlabs_api_benchmark.py  elevenlabs_stream_benchmark.py  elevenlabs_websocket_api_latency_benchmarking.py  elevenlabs_ws_benchmark.py  finetune.py  fly.toml  llm_benchmark.py  llm_benchmark_suite.py  llm_benchmark_suite.sh  llm_benchmark_vision.sh  llm_gpt4.sh  llm_request.py  mp3s_to_mp4.py  openai_benchmark.py  openai_finetune.py  openai_tts_benchmark.py  playht_benchmark.py  pyproject.toml  requirements.txt  tts_benchmark_suite.py
.github/workflows/: deploy.yml
media/text/: llama31.md  llama31.txt
media/tools/: flights.json
